# rocket_parts

./: Cargo.toml  README.md  index.html  rocket_parts_game-3b4cd9a1198c468b.js  rocket_parts_game-697ef7f90a35726f.js  rocket_parts_game-bbd37f354299c0e8.js  rocket_parts_game-ffb36c6657eb2b260da7397fe0d19ba6719045f6fe2f01d09349fac6533ac6463eee24addc9035a5e6c4e6b9db5b192d.js  todo.md  todo.txt
.github/workflows/: release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/character/: mfps_arms.glb
assets/props/: building_kit.glb  skyball.glb
assets/shaders/: array_texture.wgsl  terrain_material.wgsl  water_shader.wgsl
credits/: CREDITS.md
mobile/: Cargo.toml
mobile/src/: lib.rs
src/: audio.rs  demo.rs  game_state.rs  lib.rs  main.rs
src/actions/: building_actions.rs  game_control.rs  mod.rs
src/building/: bp_info.rs  building_grids.rs  building_snaps.rs  building_state.rs  building_toolbar.rs  mod.rs
src/character/: mfps_arms.rs  mfps_plugin.rs  mod.rs
src/inputs/: key_input.rs  mod.rs  mouse_input.rs
src/loading/: asset_loading.rs  loading_ui_state.rs  mod.rs  pre_loading.rs  scene_loading.rs
src/menu/: credits.rs  main_menu.rs  mod.rs  pause_menu.rs
src/props/: interactables_states.rs  mod.rs  props_states_plugin.rs  thrusters_state.rs
src/world/: animatable_state.rs  interactable_state.rs  isosurface_source.rs  lights_state.rs  mod.rs  sounds_state.rs  terrain_material.rs  water_state.rs  world_asset_loader.rs  world_flags.rs  world_loading.rs  world_state.rs  world_terrain.rs
tools/: blender_exporter.py
